OLD/manual/manifests/wso2/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wso2apim
  namespace: apim-wso2
spec:
  selector:
    app: wso2apim
  ports:
  - name: https
    port: 9443
    targetPort: 9443
  - name: gateway-https
    port: 8243
    targetPort: 8243
  - name: gateway-http
    port: 8280
    targetPort: 8280
