OLD/manual/manifests/wso2/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2apim
  namespace: apim-wso2
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apim-wso2.local
    secretName: wso2apim-tls
  rules:
  - host: apim-wso2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2apim
            port:
              number: 9443
